--- a/owlenlap00/.config/nitrogen/nitrogen.cfg
+++ b/owlenlap00/.config/nitrogen/nitrogen.cfg
@@ -9,4 +9,4 @@ view=list
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/usr/share/backgrounds;/usr/share/backgrounds/xfce;
+dirs=/usr/share/backgrounds;/usr/share/backgrounds/xfce;/home/solidowl/Pictures/wallpaper;
