--- a/owlenlap00/.config/compton.conf
+++ b/owlenlap00/.config/compton.conf
@@ -6,18 +6,18 @@ shadow-radius = 5;
 shadow-offset-x = -5;
 shadow-offset-y = -5;
 shadow-opacity = 0.3;
-shadow-red = 1.;
-shadow-green = 0.;
-shadow-blue = 0.;
+shadow-red = 1.0;
+shadow-green = 0.0;
+shadow-blue = 0.0;
 shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'" ];
 shadow-ignore-shaped = true;
 menu-opacity = 0.9;
 inactive-opacity = 0.7;
-active-opacity = 1.;
+active-opacity = 0.9;
 frame-opacity = 0.7;
 inactive-opacity-override = false;
 alpha-step = 0.06;
-inactive-dim = 0.;
+inactive-dim = 0.0;
 blur-kern = "3x3box";
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 fading = true;
