--- a/owlenlap00/.config/keepassxc/keepassxc.ini
+++ b/owlenlap00/.config/keepassxc/keepassxc.ini
@@ -20,10 +20,10 @@ UseGroupIconOnEntryCreation=true
 
 [GUI]
 AutoTypeSelectDialogSize=@Size(400 250)
-EntryListColumnSizes=150, 150, 485
+EntryListColumnSizes=150, 150, 136
 EntrySearchColumnSizes=@Invalid()
 Language=de
-MainWindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\0\0\0\0\0(\0\0\a\x7f\0\0\x4\x37\0\0\0\x2\0\0\0(\0\0\a}\0\0\x4\x35\0\0\0\0\0\0\0\0\a\x80)
+MainWindowGeometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\a\x8f\0\0\0#\0\0\t\x1e\0\0\x4\n\0\0\a\x91\0\0\0#\0\0\t\x1c\0\0\x4\b\0\0\0\x1\0\0\0\0\x6\x90)
 MinimizeOnClose=false
 MinimizeOnStartup=false
 MinimizeToTray=false
