--- a/owlenlap00/.config/QtProject.conf
+++ b/owlenlap00/.config/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
 history=file:///home/solidowl, file:///home/solidowl/.config/synergy, file:///home/solidowl/.config/KVIrc, file:///home/solidowl/Downloads, file:///home/solidowl/Documents/dandd/Chars
-lastVisited=file:///home/solidowl/Documents/dandd/Chars
+lastVisited=file:///home/solidowl
 qtVersion=5.10.0
 shortcuts=file:, file:///home/solidowl
 sidebarWidth=95
