--- a/owlenlap00/.config/pcmanfm/default/pcmanfm.conf
+++ b/owlenlap00/.config/pcmanfm/default/pcmanfm.conf
@@ -14,7 +14,7 @@ x-content/bootable-media=pcmanfm
 [ui]
 always_show_tabs=0
 max_tab_chars=32
-win_width=1904
+win_width=947
 win_height=1026
 splitter_pos=150
 media_in_new_tab=0
@@ -22,7 +22,7 @@ desktop_folder_new_win=0
 change_tab_on_drop=1
 close_on_unmount=1
 focus_previous=0
-side_pane_mode=dirtree
+side_pane_mode=places
 view_mode=icon
 show_hidden=0
 sort=name;descending;
